export type Cost = {
  readonly calls: number;
  readonly input_tokens: number;
  readonly output_tokens: number;
};
