export type Durations = {
  readonly collection: number;
  readonly judgment: number;
  readonly writing?: number;
  readonly total: number;
};
