export type SubjectAttributeValue = {
  readonly attribute: string;
  readonly value: string;
};
