export type Usage = {
  readonly input_tokens: number;
  readonly output_tokens: number;
};
