classDiagram
    namespace InvestigationAggregate {
        class Investigation {
            <<AggregateRoot>>
            +string id
            +string requester
            +string ticketRef
            +string narrative
            +Subject subject
            +string promptVersion
            +string model
            +Evidence[] evidence
            +Evaluation[] evaluations
            +Assessment assessment
            +Cost cost
            +Durations durations
            +datetime writtenAt
        }
    }
    class Assessment {
        <<ValueObject>>
        +Outcome outcome
        +Referral referral
        +string determiningHypothesis
        +string text
        +ConsolidationRegister register
        +Usage usage
        +integer elapsedMs
        +string prompt
    }
    class AssessmentConsolidator {
        <<Service>>
        +consolidate()
    }
    class Citation {
        <<ValueObject>>
        +Concept concept
        +string field
    }
    class Cost {
        <<ValueObject>>
        +integer calls
        +integer inputTokens
        +integer outputTokens
    }
    class Durations {
        <<ValueObject>>
        +integer collection
        +integer judgment
        +integer writing
        +integer total
    }
    class Evaluation {
        <<ValueObject>>
        +string hypothesis
        +Verdict verdict
        +EvaluationReason reason
        +Citation[] citations
        +Usage usage
        +integer elapsedMs
        +string prompt
    }
    class EvaluationReason {
        <<Enumeration>>
        NO_DATA
        JUDGMENT_FAILURE
        DEADLINE_EXCEEDED
        NOT_GROUNDED
    }
    class Evidence {
        <<ValueObject>>
        +Concept concept
        +string inputs
        +string observation
        +datetime observedAt
        +integer ttl
        +string origin
        +EvidenceResult result
        +string resultDetail
        +integer elapsedMs
        +FieldSemantics[] fields
        +string conceptDescription
        +string capabilityPayloadNotes
    }
    class EvidenceResult {
        <<Enumeration>>
        OK
        UNAVAILABLE
        DENIED
        TIMEOUT
    }
    class FieldSemantics {
        <<ValueObject>>
        +string name
        +string type
        +string description
    }
    class HypothesisEvaluator {
        <<Service>>
        +evaluate()
    }
    class Subject {
        <<ValueObject>>
        +SubjectType type
        +SubjectAttributeValue[] attributes
    }
    class SubjectAttributeValue {
        <<ValueObject>>
        +string attribute
        +string value
    }
    class Usage {
        <<ValueObject>>
        +integer inputTokens
        +integer outputTokens
    }
    class Verdict {
        <<Enumeration>>
        CONFIRMED
        REFUTED
        INCONCLUSIVE
    }
    class Concept {
        <<external: glossary>>
    }
    class Outcome {
        <<external: glossary>>
    }
    class SubjectType {
        <<external: glossary>>
    }
    class Capability {
        <<external: integration>>
    }
    class Case {
        <<external: knowledge>>
    }
    class ConsolidationRegister {
        <<external: knowledge>>
    }
    class Referral {
        <<external: knowledge>>
    }
    Evidence "0..*" --> "1" Capability
    Investigation "0..*" --> "1" Case : pinnedCase
